--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12628468.md#1" title="撑警李偲嫣染疫猝死 网络沸腾建制派一片沉寂""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/160303101448100484-600x400-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12626810.md#1" title="【直播预告】挺川灭共站出来 台北游行集会""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/5d0e4e182deda2562b326a3985f3e8f4-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/onivku3167/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://onivku3167.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630731.md#1">川普吁麦康奈尔和GOP参议员须强硬反窃选</a><br>
-:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630207.md#1">传拜登任命变性人做教育部长 华人网友担忧</a><br>
-:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12625486.md#1">【时事军事】钓鱼岛冲突再起 日本暗示或开打</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630705.md#1">中共缺席美中安全会 美：不履行协议又一例证</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630646.md#1">密歇根一县大选夜报拜登赢 重计票确认川普胜</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630652.md#1">挑战乔州缺席投票规则 GOP两诉讼遭法官驳回</a><br>
+:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630561.md#1">美议员提制止中共强摘器官法案 专家指意义大</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630772.md#1">鲍威尔：最高院驳回威州和亚利桑那选举舞弊案</a><br>
+:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630731.md#1">川普吁麦康奈尔和GOP参议员须强硬反窃选</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630207.md#1">传拜登任命变性人做教育部长 华人网友担忧</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12625486.md#1">【时事军事】钓鱼岛冲突再起 日本暗示或开打</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630705.md#1">中共缺席美中安全会 美：不履行协议又一例证</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12627138.md#1">川普宣布延长紧急状态 以应对国家安全威胁</a><br>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12625463.md#1">制裁澳煤反自伤 大陆多省市强制限电停工</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 369,578,168 人
+!共 369,578,203 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
