--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/onivku3167/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/onivku3167/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/onivku3167/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/onivku3167/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630320.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/12/fc3609c2ada90f8313560ad88d130768-320x200.jpg"><p align="center">【新闻大家谈】巨兽握免死牌？川普誓反击</p></a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630731.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/03/000_1PR7WX-320x200.jpg"><p align="center">川普吁麦康奈尔和GOP参议员须强硬反窃选</p></a>
+<a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630731.md#1" title="川普吁麦康奈尔和GOP参议员须强硬反窃选""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/03/000_1PR7WX-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630320.md#1" title="【新闻大家谈】巨兽握免死牌？川普誓反击""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/fc3609c2ada90f8313560ad88d130768-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630086.md#1" title="美国38州对谷歌提反垄断诉讼""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/08/GettyImages-1154955595-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630222.md#1" title="美商务部将中芯国际等数十中企列入黑名单""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/07c1449a62e5d3c0aa4d54a1619c034a-600x400-1-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12628599.md#1" title="彭斯：和川普继续战斗 直到剔除每张非法票""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1289450919-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12628284.md#1" title="中石油要海外办事处紧急销毁“党建”文件""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/CP13747172-1r-1200x800-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12628468.md#1" title="撑警李偲嫣染疫猝死 网络沸腾建制派一片沉寂""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/160303101448100484-600x400-1-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12626810.md#1" title="【直播预告】挺川灭共站出来 台北游行集会""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/5d0e4e182deda2562b326a3985f3e8f4-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/onivku3167/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://onivku3167.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630561.md#1">美议员提制止中共强摘器官法案 专家指意义大</a><br>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630772.md#1">鲍威尔：最高院驳回威州和亚利桑那选举舞弊案</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630731.md#1">川普吁麦康奈尔和GOP参议员须强硬反窃选</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630207.md#1">传拜登任命变性人做教育部长 华人网友担忧</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12625486.md#1">【时事军事】钓鱼岛冲突再起 日本暗示或开打</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630705.md#1">中共缺席美中安全会 美：不履行协议又一例证</a><br>
+:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629232.md#1">白宫网站请愿：请总统下令戒严拯救国家</a><br>
+:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630544.md#1">【直播】多米尼证人指控其CEO作证时撒谎</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630561.md#1">美议员提制止中共强摘器官法案 专家指意义大</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630772.md#1">鲍威尔：最高院驳回威州和亚利桑那选举舞弊案</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630731.md#1">川普吁麦康奈尔和GOP参议员须强硬反窃选</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12625486.md#1">【时事军事】钓鱼岛冲突再起 日本暗示或开打</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12627138.md#1">川普宣布延长紧急状态 以应对国家安全威胁</a><br>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/16/n12625463.md#1">制裁澳煤反自伤 大陆多省市强制限电停工</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 369,578,203 人
+!共 369,578,207 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
